# web3_py

./: .gitignore  README.md  package.json  pyproject.toml
src/web3_demo/: __main__.py
src/web3_demo/utils/: beacon_proxy.py
src/web3_py/: __main__.py
