[project]
name = "web3-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "0xEthan",email = "ethanzhang@creditease.cn"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "web3 (>=7.12.1,<8.0.0)"
]

[tool.poetry]
packages = [{include = "web3_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
